# etl_python_excel

./: .gitignore  README.md  columns_reader_example.xlsx  pyproject.toml
Documents/repos/eda_cattle/: database.xlsx
Documents/repos/etl_excel/data/output/: output.xlsx
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
artifacts/0f/c5/59/40c9a3ef5fdd77321796026fd310f20462a47b65e7da936db8d701efb3/: jupyter_core-5.7.1-py3-none-any.whl
artifacts/34/ec/b8/d08616425902d120c60b64afeebf5e0a2729721359265aabb3cceabba4/: pyzmq-25.1.2-cp311-cp311-win_amd64.whl
artifacts/4c/74/78/fd4887140f9774e00039157ab240047c4a2e1a823ed8049c25142b75d0/: ipykernel-6.29.3-py3-none-any.whl
artifacts/52/5e/6c/2887c22a0e0bac7bdfc0a83310f6b6211f15efcc1c5190e1a87d4c244c/: black-24.2.0-cp312-cp312-win_amd64.whl
artifacts/68/7d/e0/26fd09d0155121336b31e1d6327f8a7d1fd15d765515a723175de23c72/: tornado-6.4-cp38-abi3-win_amd64.whl
artifacts/81/9a/7b/4691161979b0286ec32d3c9aa755ce9c64f0437699f07a96a1795e213a/: comm-0.2.1-py3-none-any.whl
artifacts/84/be/ec/d56d7b38d6ef11e4a8f334fcb643833f6a406977018ce32ee7f9605fdc/: ipython-8.21.0-py3-none-any.whl
artifacts/a6/4e/39/67a9f4db3acfecc4992d0e65b71e8bcd3533e2dd30c1b114a6106e72e9/: ipython-8.22.2-py3-none-any.whl
artifacts/be/df/55/ee3805871fef7ecc27b0c9112f5734dac97202ab423d67c7cdea882187/: pyxlsb-1.0.10-py2.py3-none-any.whl
artifacts/d9/9c/e7/2f43aff06fc5c62c4714038314199644a4b146a74ff5d9e713365a0a81/: jupyter_client-8.6.0-py3-none-any.whl
data/output/: file_loaded.csv.csv
tests/: test_pipeline.py
(+2 files in other folders)
