[tool.poetry]
name = "etl-excel"
version = "0.1.0"
description = "Projeto de ETL de arquivos em excel utilizando o python"
authors = ["Thales Luiz <thalesluizbraga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
